# RTC-Hackathon

./: .gitignore  README.md  README.zh.md
SDKChallengeProject/: .gitignore  README.md  package-lock.json  package.json
SDKChallengeProject/QiMingNewWord/: README.md
SDKChallengeProject/Syncit/: .gitignore  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  rollup.config.js
SDKChallengeProject/VisualCall-Android/: README.md
SDKChallengeProject/Xeducation/: README.md
SDKChallengeProject/Zero_PlayHead/: .gitignore  README.md  build.gradle
SDKChallengeProject/Zero_PlayHead/app/src/main/cpp/: CMakeLists.txt  apm-plugin-packet-processing.cpp
SDKChallengeProject/Zero_PlayHead/app/src/main/cpp/include/: apm-plugin-packet-processing.h
SDKChallengeProject/__tests__/: buffer.test.js  transport.test.js
SDKChallengeProject/funny_images/: README.md  pom.xml
SDKChallengeProject/likemosaic/: .gitignore  README.md
SDKChallengeProject/mood-planet/: README.md  create_sql.sql
SDKChallengeProject/public/: embed.html  global.css  index.html
SDKChallengeProject/server/: settings.gradle
SDKChallengeProject/shareDreams/: .eslintrc.js  README.md  index.html  package-lock.json  package.json
SDKChallengeProject/src/: App.svelte  Embed.svelte  buffer.js  common.js  constant.js  transport.js
SDKChallengeProject/竹辩/: .env  .gitignore  Jenkinsfile  README.md  config-overrides.js  package.json  server.php
UIChallengeProject/: README.md
agora-food/: App.vue  config.js  main.js  manifest.json  pages.json  uni.scss
agora-food/common/: main.css  (+3 more)
(+1058 files in other folders)
